[package]
name = "mcx-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
mcx-pac = { version = "0.1.5", default-features = false }
cortex-m = { version = "0.7" }
embedded-hal = "1"

paste = "1"
cfg-if = "1"

[dev-dependencies]
panic-halt = "1"
cortex-m-rt = "0.7"

[features]
rt = ["mcx-pac/rt"]

mcxa153 = ["mcx-pac/mcxa153", "mcxa0"]
mcxa156 = ["mcx-pac/mcxa156", "mcxa1"]
mcxa276 = ["mcx-pac/mcxa276", "mcxa2"]

mcxa0 = ["mcxa"]
mcxa1 = ["mcxa"]
mcxa2 = ["mcxa"]
mcxa = []
