[package]
name = "mcx-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
mcx-pac = { version = "0.1.6", default-features = false, optional = true }
cortex-m = { version = "0.7" }
cortex-m-rt = { version = "0.7" }
embedded-hal = "1"

paste = "1"
cfg-if = "1"

[dev-dependencies]
panic-halt = "1"
cortex-m-rt = "0.7"

[features]
rt = ["mcx-pac/rt"]

device = []

mcxa153 = ["mcx-pac/mcxa153", "mcxa0", "device"]
mcxa156 = ["mcx-pac/mcxa156", "mcxa1", "device"]
mcxa276 = ["mcx-pac/mcxa276", "mcxa2", "device"]

mcxa = ["mcx"]
mcxa0 = ["mcxa"]
mcxa1 = ["mcxa"]
mcxa2 = ["mcxa"]

mcxn = ["mcx"]
mcxn0 = ["mcxn"]
mcxn1 = ["mcxn"]

mcx = []
