[package]
name = "mcx-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
mcx-pac = { version = "0.1.7", default-features = false }
cortex-m = { version = "0.7" }
cortex-m-rt = { version = "0.7" }
# embedded-hal = "1"
eh1 = { package = "embedded-hal", version = "1" }
eio06 = { package = "embedded-io", version = "0.6" }

paste = "1"
cfg-if = "1"

bitflags = "2.9"

critical-section = { version = "1", optional = true }

[dev-dependencies]
panic-halt = "1"
cortex-m-rt = "0.7"

heapless = "0.8"

rtic = { version = "2.1.2", features = ["thumbv8main-backend"] }
rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }
rtic-sync = "1.3"

[features]
rt = ["mcx-pac/rt"]
device = []

mcxa346 = ["mcx-pac/mcxa346", "mcxa2"]

mcxa = ["device"]
mcxa0 = ["mcxa", "_cs_single_core"]
mcxa1 = ["mcxa", "_cs_single_core"]
mcxa2 = ["mcxa", "_cs_single_core"]

mcxn = ["device"]
mcxn0 = ["mcxn"]
mcxn1 = ["mcxn"]

_cs_single_core = ["cortex-m/critical-section-single-core"]
